<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"
        ></item>

    <item
        android:id="@+id/wallet"
        android:title="@string/menu_walet"
        android:icon="@drawable/ic_walet"></item>

    <item
        android:id="@+id/add"
        android:title="Agregar"
        android:icon="@drawable/ic_add2"
        ></item>

    <item
        android:id="@+id/addressbook"
        android:title="@string/menu_addressbook"
        android:icon="@drawable/ic_person"></item>

    <item
        android:id="@+id/settings"
        android:title="@string/menu_setings"
        android:icon="@drawable/ic_settings"></item>

</menu>