<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/bg_color"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tarjeta"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_alignParentTop="true"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_login"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/login_header"
            android:textColor="@color/text_color"
            android:textSize="32sp"
            android:textStyle="bold"

            ></TextView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/tarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome"
                android:textColor="@color/bg_color"
                android:textSize="32sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_message"></TextView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="50dp"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_email"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/txtCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/email_icon"
                android:inputType="textEmailAddress"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_password"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/txtContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/password_icon"
                android:inputType="textPassword"></EditText>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblOlvidoContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/login_forgotpassword"></TextView>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <Button
                android:id="@+id/btIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/login_btn"
                android:text="@string/login_btn"
                android:textColor="@color/text_color"></Button>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:text="@string/login_new_user"
                    android:layout_marginRight="10dp"
                    ></TextView>

                <TextView
                    android:id="@+id/lblRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:text="Registrate"
                    android:textStyle="bold"
                    android:textColor="@color/bg_color"
                    ></TextView>


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="200dp"></View>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>










