<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentTermActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/titulo"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:id="@+id/btRegregar"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/bg_color"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_back"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/payment_term_title"
            android:textSize="22dp"
            android:gravity="center"
            android:background="@color/bg_color"
            android:textColor="@color/text_color"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            ></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/add_payment_term_name"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    ></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/login_star"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/bg_red"
                    android:paddingLeft="5dp"
                    ></TextView>

            </LinearLayout>

            <EditText
                android:id="@+id/txtNombreTermino"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:background="@drawable/round_textbox_form"
                android:layout_height="45dp"
                android:paddingLeft="10dp"
                ></EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/add_payment_term_count"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    ></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/login_star"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/bg_red"
                    android:paddingLeft="5dp"
                    ></TextView>

            </LinearLayout>

            <EditText
                android:id="@+id/txtCantdadDias"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:background="@drawable/round_textbox_form"
                android:layout_height="45dp"
                android:paddingLeft="10dp"
                ></EditText>

            <Button
                android:id="@+id/btGuardar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/round_button_screen"
                android:text="@string/add_payment_term_button"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></Button>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_term_list_title"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/background_dark"
        android:layout_marginBottom="10dp"
        ></TextView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listadoTerminosCredito"
        android:padding="15dp"
        android:dividerHeight="1dp"
        >
    </ListView>

</LinearLayout>










