<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/titulo"
        >

        <ImageView
            android:id="@+id/btRegregar"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/bg_color"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_back"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_wallet_title"
            android:textSize="25dp"
            android:gravity="center"
            android:background="@color/bg_color"
            android:textColor="@color/text_color"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            ></TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titulo"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/add_wallet_name"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_star"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/bg_red"
                android:paddingLeft="5dp"
                ></TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/txtNombreCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            ></EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/add_wallet_description"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_star"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/bg_red"
                android:paddingLeft="5dp"
                ></TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/txtDescripcionCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textMultiLine"
            ></EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/add_wallet_number"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_star"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/bg_red"
                android:paddingLeft="5dp"
                ></TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/txtNumeroCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            ></EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/add_wallet_bank"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_star"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/bg_red"
                android:paddingLeft="5dp"
                ></TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/txtBanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            ></EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/add_wallet_type"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_star"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/bg_red"
                android:paddingLeft="5dp"
                ></TextView>

        </LinearLayout>

        <Spinner
            android:id="@+id/cmbTipo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            >
        </Spinner>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/add_wallet_date"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_star"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/bg_red"
                android:paddingLeft="5dp"
                ></TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="date"
            ></EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/add_wallet_balance"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_star"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/bg_red"
                android:paddingLeft="5dp"
                ></TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/txtSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="numberDecimal"
            ></EditText>

        <Button
            android:id="@+id/btGuardar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/round_button_screen"
            android:text="@string/add_wallet_btnSave"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="18dp"
            android:fontFamily="sans-serif-condensed-medium"
            ></Button>

    </LinearLayout>

</RelativeLayout>