<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/bg_color"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_alignParentTop="true"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_header_forgot"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/forgot_message"
            android:textColor="@color/text_color"
            android:textSize="25sp"
            android:textStyle="bold"

            ></TextView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/tarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_welcome"
                android:textColor="@color/bg_color"
                android:textSize="32sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/forgot_message"></TextView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="50dp"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_email"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/txtCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/email_icon"
                android:inputType="textEmailAddress"></EditText>


            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"></View>

            <Button
                android:id="@+id/btEnviarCorreo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/login_btn"
                android:text="@string/forgot_btn"
                android:textColor="@color/text_color"></Button>

            <View
                android:layout_width="wrap_content"
                android:layout_height="300dp"></View>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>